--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "cloudinary": "^1.41.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "next": "13.5.5-canary.17",
     "next-images": "^1.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss-textshadow": "^2.1.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
