--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.19.2",
     "@types/node": "20.6.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "cloudinary": "^1.41.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.5.5-canary.17",
+    "next": "14.0.1",
     "next-images": "^1.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
