--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trapiche",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,22 +10,22 @@
   },
   "dependencies": {
     "@types/node": "20.6.1",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@vercel/analytics": "^1.1.2",
-    "cloudinary": "^1.41.0",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "cloudinary": "2.5.1",
+    "eslint": "9.19.0",
+    "eslint-config-next": "15.1.6",
     "next": "14.0.1",
     "next-images": "^1.8.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "tailwindcss-textshadow": "^2.1.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
     "autoprefixer": "10.4.15",
     "postcss": "8.4.29",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "4.0.4"
   }
 }
